# vel_safety_limiter

./: CMakeLists.txt  README.md  package.xml
include/vel_safety_limiter/: emergency_checker.hpp
launch/: example.launch
src/: emergency_checker.cpp  vel_limiter.cpp
